--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
 		"node-vibrant": "3.1.6",
 		"normalize.css": "^8.0.1",
 		"qrcode-svg": "^1.1.0",
-		"sass": "^1.82.0"
+		"sass": "^1.82.0",
+		"socket.io": "^4.8.1",
+		"socket.io-client": "^4.8.1",
+		"svelte-ionicons": "^2.0.1"
 	}
 }
