--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "concurrently \"npm:dev:*\"",
+		"dev": "NODE_ENV=development concurrently \"npm:dev:*\"",
 		"dev:frontend": "vite dev",
 		"dev:server": "nodemon --ignore 'server/*.json' server",
 		"build": "vite build",
@@ -40,6 +40,7 @@
 	"dependencies": {
 		"@spotify/web-api-ts-sdk": "^1.2.0",
 		"cors": "^2.8.5",
+		"deepmerge": "^4.3.1",
 		"detect-rpi": "^1.5.0",
 		"dotenv": "^16.4.7",
 		"express": "^4.21.1",
