chore: slight refactor

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	},
 	"dependencies": {
 		"@spotify/web-api-ts-sdk": "^1.2.0",
+		"bunyan": "^1.8.15",
 		"cors": "^2.8.5",
 		"deepmerge": "^4.3.1",
 		"detect-rpi": "^1.5.0",
