--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"sass": "^1.82.0",
 		"socket.io": "^4.8.1",
 		"socket.io-client": "^4.8.1",
+		"sonos": "^1.14.1",
 		"svelte-ionicons": "^2.0.1"
 	}
 }
