--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
 	},
 	"dependencies": {
 		"@spotify/web-api-ts-sdk": "^1.2.0",
+		"ambient-kiosk-mode": "^1.0.1",
+		"ambient-sonos-fallback": "^1.0.0",
 		"bunyan": "^1.8.15",
 		"cors": "^2.8.5",
 		"deepmerge": "^4.3.1",
