fix: continued to make the project less reliant on local install

--- a/ambient.config.js.template
+++ b/ambient.config.js.template
@@ -1,13 +1,13 @@
-import dotenv from 'dotenv';
-dotenv.config();
-
-// import * as KioskPlugin from './plugins/KioskMode.js';
+// import * as KioskPlugin from 'ambient-kiosk-mode';
+// import * as SonosFallbackPlugin from 'ambient-sonos-fallback';
 
 /** @type {import('./server/types/options.js').Config} */
 export default {
+	// plugins: [KioskPlugin, SonosFallbackPlugin],
+
 	// A nice way to pass in the credentials
 	// spotify: {
 	// 	client_id: process.env.SPOTIFY_CLIENT_ID,
 	// 	client_secret: process.env.SPOTIFY_CLIENT_SECRET
-	// },
+	// }
 };
