--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "ambient-display",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"description": "Like a spotify jam but much worse, but also much better. If you need it, you'll love it.",
 	"type": "module",
 	"bin": {
@@ -15,7 +15,9 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
 		"format": "prettier --write .",
-		"lint": "prettier --check . && eslint ."
+		"lint": "prettier --check . && eslint .",
+		"release": "standard-version",
+		"release:publish": "npm run release && npm publish"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.3",
@@ -35,6 +37,7 @@
 		"prettier-plugin-svelte": "^3.2.6",
 		"sharp": "^0.33.5",
 		"sharp-ico": "^0.1.5",
+		"standard-version": "^9.5.0",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"svgo": "^3.3.2",
