--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "ambient-display",
-	"version": "1.1.0",
+	"version": "1.1.1",
 	"description": "Like a spotify jam but much worse, but also much better. If you need it, you'll love it.",
 	"type": "module",
 	"bin": {
@@ -19,7 +19,13 @@
 		"release": "standard-version",
 		"release:publish": "npm run build && npm run release && npm publish"
 	},
-	"files": ["build/*", "server/*", "ambient.config.js.template", "README.md", ".nvmrc"],
+	"files": [
+		"build/*",
+		"server/*",
+		"ambient.config.js.template",
+		"README.md",
+		".nvmrc"
+	],
 	"devDependencies": {
 		"@eslint/compat": "^1.2.3",
 		"@poppanator/sveltekit-svg": "^5.0.0",
