--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "ambient-display",
-	"version": "1.1.17",
+	"version": "1.1.18",
 	"description": "Like a spotify jam but much worse, but also much better. If you need it, you'll love it.",
 	"type": "module",
 	"bin": {
@@ -61,6 +61,7 @@
 		"detect-rpi": "^1.5.0",
 		"dotenv": "^16.4.7",
 		"express": "^4.21.1",
+		"express-list-endpoints": "^7.1.1",
 		"node-fetch": "^3.3.2",
 		"node-vibrant": "3.1.6",
 		"normalize.css": "^8.0.1",
